// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render pageLayout w/beforeToolbarComponent 1`] = `
<div
  id="main"
>
  <div
    id="react-content"
  >
    <Connect(ToastsList)
      railsMessages={Array []}
    />
    <div
      id="breadcrumb"
    >
      <Connect(BreadcrumbBar)
        breadcrumbItems={
          Array [
            Object {
              "caption": "root",
              "url": "/some-url",
            },
            Object {
              "caption": "child with onClick",
              "onClick": [MockFunction],
            },
            Object {
              "caption": "active child",
            },
          ]
        }
        isSwitchable={false}
        resource={
          Object {
            "nameField": "name",
            "resourceUrl": "some/url",
            "switcherItemUrl": "some/url/:id",
          }
        }
      />
    </div>
    beforeToolbarComponent
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="title_filter"
        componentClass="div"
        md={6}
      >
        <Connect(SearchBar)
          data={
            Object {
              "data": Object {
                "autocomplete": Object {
                  "id": "searchBar",
                  "searchQuery": null,
                  "url": "model/auto_complete_search",
                  "useKeyShortcuts": true,
                },
                "bookmarks": Object {
                  "canCreate": true,
                  "documentationUrl": "/doc/url",
                  "url": "/api/bookmarks",
                },
                "controller": "models",
              },
            }
          }
          initialQuery=""
          onBookmarkClick={[Function]}
          onSearch={[Function]}
        />
         
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        id="title_action"
        md={6}
      >
        <div
          className="btn-toolbar pull-right"
        />
      </Col>
    </Row>
    body
  </div>
</div>
`;

exports[`render pageLayout w/search 1`] = `
<div
  id="main"
>
  <div
    id="react-content"
  >
    <Connect(ToastsList)
      railsMessages={Array []}
    />
    <div
      id="breadcrumb"
    >
      <Connect(BreadcrumbBar)
        breadcrumbItems={
          Array [
            Object {
              "caption": "root",
              "url": "/some-url",
            },
            Object {
              "caption": "child with onClick",
              "onClick": [MockFunction],
            },
            Object {
              "caption": "active child",
            },
          ]
        }
        isSwitchable={false}
        resource={
          Object {
            "nameField": "name",
            "resourceUrl": "some/url",
            "switcherItemUrl": "some/url/:id",
          }
        }
      />
    </div>
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="title_filter"
        componentClass="div"
        md={6}
      >
        <Connect(SearchBar)
          data={
            Object {
              "data": Object {
                "autocomplete": Object {
                  "id": "searchBar",
                  "searchQuery": null,
                  "url": "model/auto_complete_search",
                  "useKeyShortcuts": true,
                },
                "bookmarks": Object {
                  "canCreate": true,
                  "documentationUrl": "/doc/url",
                  "url": "/api/bookmarks",
                },
                "controller": "models",
              },
            }
          }
          initialQuery=""
          onBookmarkClick={[Function]}
          onSearch={[Function]}
        />
         
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        id="title_action"
        md={6}
      >
        <div
          className="btn-toolbar pull-right"
        />
      </Col>
    </Row>
    body
  </div>
</div>
`;

exports[`render pageLayout w/toastNotifications 1`] = `
<div
  id="main"
>
  <div
    id="react-content"
  >
    <Connect(ToastsList)
      railsMessages={
        Array [
          Object {
            "key": "test-key",
            "message": "Widget positions successfully saved.",
            "type": "success",
          },
        ]
      }
    />
    <div
      id="breadcrumb"
    >
      <Connect(BreadcrumbBar)
        breadcrumbItems={
          Array [
            Object {
              "caption": "root",
              "url": "/some-url",
            },
            Object {
              "caption": "child with onClick",
              "onClick": [MockFunction],
            },
            Object {
              "caption": "active child",
            },
          ]
        }
        isSwitchable={false}
        resource={
          Object {
            "nameField": "name",
            "resourceUrl": "some/url",
            "switcherItemUrl": "some/url/:id",
          }
        }
      />
    </div>
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="title_filter"
        componentClass="div"
        md={6}
      >
        <Connect(SearchBar)
          data={
            Object {
              "data": Object {
                "autocomplete": Object {
                  "id": "searchBar",
                  "searchQuery": null,
                  "url": "model/auto_complete_search",
                  "useKeyShortcuts": true,
                },
                "bookmarks": Object {
                  "canCreate": true,
                  "documentationUrl": "/doc/url",
                  "url": "/api/bookmarks",
                },
                "controller": "models",
              },
            }
          }
          initialQuery=""
          onBookmarkClick={[Function]}
          onSearch={[Function]}
        />
         
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        id="title_action"
        md={6}
      >
        <div
          className="btn-toolbar pull-right"
        />
      </Col>
    </Row>
    body
  </div>
</div>
`;

exports[`render pageLayout w/toolBar 1`] = `
<div
  id="main"
>
  <div
    id="react-content"
  >
    <Connect(ToastsList)
      railsMessages={Array []}
    />
    <div
      id="breadcrumb"
    >
      <Connect(BreadcrumbBar)
        breadcrumbItems={
          Array [
            Object {
              "caption": "root",
              "url": "/some-url",
            },
            Object {
              "caption": "child with onClick",
              "onClick": [MockFunction],
            },
            Object {
              "caption": "active child",
            },
          ]
        }
        isSwitchable={false}
        resource={
          Object {
            "nameField": "name",
            "resourceUrl": "some/url",
            "switcherItemUrl": "some/url/:id",
          }
        }
      />
    </div>
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="title_filter"
        componentClass="div"
        md={6}
      >
        <Connect(SearchBar)
          data={
            Object {
              "data": Object {
                "autocomplete": Object {
                  "id": "searchBar",
                  "searchQuery": null,
                  "url": "model/auto_complete_search",
                  "useKeyShortcuts": true,
                },
                "bookmarks": Object {
                  "canCreate": true,
                  "documentationUrl": "/doc/url",
                  "url": "/api/bookmarks",
                },
                "controller": "models",
              },
            }
          }
          initialQuery=""
          onBookmarkClick={[Function]}
          onSearch={[Function]}
        />
         
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        id="title_action"
        md={6}
      >
        <div
          className="btn-toolbar pull-right"
        >
          toolbarButton
        </div>
      </Col>
    </Row>
    body
  </div>
</div>
`;

exports[`render pageLayout with custom breadcrumbs 1`] = `
<div
  id="main"
>
  <div
    id="react-content"
  >
    <Connect(ToastsList)
      railsMessages={Array []}
    />
    <div
      id="breadcrumb"
    >
      <Component />
    </div>
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="title_filter"
        componentClass="div"
        md={6}
      >
        <Connect(SearchBar)
          data={
            Object {
              "data": Object {
                "autocomplete": Object {
                  "id": "searchBar",
                  "searchQuery": null,
                  "url": "model/auto_complete_search",
                  "useKeyShortcuts": true,
                },
                "bookmarks": Object {
                  "canCreate": true,
                  "documentationUrl": "/doc/url",
                  "url": "/api/bookmarks",
                },
                "controller": "models",
              },
            }
          }
          initialQuery=""
          onBookmarkClick={[Function]}
          onSearch={[Function]}
        />
         
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        id="title_action"
        md={6}
      >
        <div
          className="btn-toolbar pull-right"
        />
      </Col>
    </Row>
    body
  </div>
</div>
`;

exports[`render pageLayout without breadcrumbs 1`] = `
<div
  id="main"
>
  <div
    id="react-content"
  >
    <Connect(ToastsList)
      railsMessages={Array []}
    />
    <div
      id="breadcrumb"
    >
      <div
        className="row form-group"
      >
        <h1
          className="col-md-8"
        >
          Page
        </h1>
      </div>
    </div>
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="title_filter"
        componentClass="div"
        md={6}
      >
        <Connect(SearchBar)
          data={
            Object {
              "data": Object {
                "autocomplete": Object {
                  "id": "searchBar",
                  "searchQuery": null,
                  "url": "model/auto_complete_search",
                  "useKeyShortcuts": true,
                },
                "bookmarks": Object {
                  "canCreate": true,
                  "documentationUrl": "/doc/url",
                  "url": "/api/bookmarks",
                },
                "controller": "models",
              },
            }
          }
          initialQuery=""
          onBookmarkClick={[Function]}
          onSearch={[Function]}
        />
         
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        id="title_action"
        md={6}
      >
        <div
          className="btn-toolbar pull-right"
        />
      </Col>
    </Row>
    body
  </div>
</div>
`;

exports[`render pageLayout without search 1`] = `
<div
  id="main"
>
  <div
    id="react-content"
  >
    <Connect(ToastsList)
      railsMessages={Array []}
    />
    <div
      id="breadcrumb"
    >
      <Connect(BreadcrumbBar)
        breadcrumbItems={
          Array [
            Object {
              "caption": "root",
              "url": "/some-url",
            },
            Object {
              "caption": "child with onClick",
              "onClick": [MockFunction],
            },
            Object {
              "caption": "active child",
            },
          ]
        }
        isSwitchable={false}
        resource={
          Object {
            "nameField": "name",
            "resourceUrl": "some/url",
            "switcherItemUrl": "some/url/:id",
          }
        }
      />
    </div>
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="title_filter"
        componentClass="div"
        md={4}
      >
         
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        id="title_action"
        md={8}
      >
        <div
          className="btn-toolbar pull-right"
        />
      </Col>
    </Row>
    body
  </div>
</div>
`;
